// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading attach demo works fine 1`] = `
<div
  class="loading-attach-demo"
>
  <div
    class="loading-attach-demo__title"
    id="alice"
  >
    Hello, I'm Alice.
  </div>
   
  <div
    class="loading-attach-demo__title"
    id="bob"
  >
    Hi, I'm Bob.
  </div>
   
  <div
    class="t-loading t-size-m t-loading-mask t-loading-lock t-loading__wrapper v-transfer-dom"
  >
    <div
      class="t-loading__gradient t-loading__gradient-medium t-icon-loading"
    >
      <div />
    </div>
  </div>
</div>
`;

exports[`Loading base demo works fine 1`] = `
<div
  class="t-loading-demo"
>
  <div
    class="t-loading t-size-m t-loading-lock v-transfer-dom"
  >
    <div
      class="t-loading__gradient t-loading__gradient-medium t-icon-loading"
    >
      <div />
    </div>
  </div>
   
  <div
    class="t-loading t-size-m t-loading-lock v-transfer-dom"
  >
    <img
      class="t-icon-loading"
      src="https://tdesign.gtimg.com/icon/loading.png"
    />
  </div>
</div>
`;

exports[`Loading delay demo works fine 1`] = `
<div
  class="loading-delay-demo"
>
  <div>
    <div
      class="t-loading t-size-s t-loading-lock v-transfer-dom"
    />
     
    <div
      class="switch-demo"
    >
      <!---->
    </div>
  </div>
   
  <br />
   
  <div
    class="wrap"
  >
    <div
      class="t-loading-parent__relative"
    >
      <div
        class="wrap"
      >
        
      </div>
    </div>
  </div>
   
  <button
    class="t-button t-size-s t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      快速重新加载数据（无loading）
    </span>
  </button>
   
  <button
    class="t-button t-size-s t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      慢速重新加载数据
    </span>
  </button>
</div>
`;

exports[`Loading fullscreen demo works fine 1`] = `
<div>
  <div
    class="t-loading t-size-m t-loading-fullscreen t-loading-lock v-transfer-dom"
  />
   
  <div
    class="switch-demo"
  >
    
    全局加载开关（开启加载1秒后自动归位）：
    
    <div
      class="t-switch t-size-m"
    >
      <span
        class="t-switch__handle"
      />
      <div
        class="t-switch__content t-size-m"
      />
    </div>
  </div>
</div>
`;

exports[`Loading iconText demo works fine 1`] = `
<div>
  <div
    class="t-loading t-size-m t-loading-lock v-transfer-dom"
  >
    <div
      class="t-loading__gradient t-loading__gradient-medium t-icon-loading"
    >
      <div />
    </div>
    <div
      class="t-loading-text"
    >
      拼命加载中...
    </div>
  </div>
</div>
`;

exports[`Loading service demo works fine 1`] = `
<div>
  <div
    class="loading-service-demo"
    id="loading-service-demo"
  >
    我是service的容器
  </div>
   
  <button
    class="t-button t-size-s t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      服务方式加载（全屏）
    </span>
  </button>
   
  <button
    class="t-loading__btn t-button t-size-s t-button--variant-base t-button--theme-primary"
    type="button"
  >
    <span
      class="t-button__text"
    >
      服务方式加载（局部）
    </span>
  </button>
</div>
`;

exports[`Loading size demo works fine 1`] = `
<div
  class="loading-demo"
>
  <div>
    <div
      class="t-loading t-size-s t-loading-lock v-transfer-dom"
    >
      <div
        class="t-loading__gradient t-loading__gradient-small t-icon-loading"
      >
        <div />
      </div>
      <div
        class="t-loading-text"
      >
        加载中（小）...
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="t-loading t-size-m t-loading-lock v-transfer-dom"
    >
      <div
        class="t-loading__gradient t-loading__gradient-medium t-icon-loading"
      >
        <div />
      </div>
      <div
        class="t-loading-text"
      >
        加载中（中）...
      </div>
    </div>
  </div>
   
  <div>
    <div
      class="t-loading t-size-l t-loading-lock v-transfer-dom"
    >
      <div
        class="t-loading__gradient t-loading__gradient-large t-icon-loading"
      >
        <div />
      </div>
      <div
        class="t-loading-text"
      >
        加载中（大）...
      </div>
    </div>
  </div>
</div>
`;

exports[`Loading text demo works fine 1`] = `
<div
  class="t-loading-demo"
>
  <div
    class="t-loading t-size-m t-loading-lock v-transfer-dom"
  >
    <div
      class="t-loading-text"
    >
      静态文字加载中...
    </div>
  </div>
   
  <div
    class="t-loading t-size-m t-loading-lock v-transfer-dom"
  >
    <div
      class="t-loading-text"
    >
      <span>
        变量文字加载中...
      </span>
    </div>
  </div>
   
  <div
    class="t-loading t-size-m t-loading-lock v-transfer-dom"
  >
    <div
      class="t-loading-text"
    >
      插槽文字加载中...
    </div>
  </div>
</div>
`;

exports[`Loading wrap demo works fine 1`] = `
<div
  class="loading-wrap-demo"
>
  <div
    class="t-loading-parent__relative"
  >
    <div>
      this is loading component
    </div>
     
    <div>
      this is loading component
    </div>
     
    <div>
      this is loading component
    </div>
     
    <div>
      this is loading component
    </div>
     
    <div>
      this is loading component
    </div>
    <div
      class="t-loading__wrapper t-loading-mask"
    >
      <div
        class="t-loading__gradient t-loading__gradient-small t-icon-loading"
      >
        <div />
      </div>
    </div>
  </div>
   
  <br />
   
  <div>
    <button
      class="t-button t-size-s t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        加载中
      </span>
    </button>
     
    <button
      class="t-button t-size-s t-button--variant-base t-button--theme-primary"
      type="button"
    >
      <span
        class="t-button__text"
      >
        加载完成
      </span>
    </button>
  </div>
</div>
`;
